Text formatting, styling, wording. #s label columns
Changed column sizes on phone and age fields so label didn’t have
reduced columns

Commented out button experiments on Home

--- a/_pages/Animal_info.html
+++ b/_pages/Animal_info.html
@@ -85,7 +85,8 @@ layout: contact_sidebar
       <div class="alert alert-warning d-none js-dog-rabies-alert row" role="alert">
           <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
           <div class="col-md-11 alert-body">
-              <p>By law in the State of Texas, all dogs must be vaccinated for rabies. You may still continue the application, but please vaccinate your dogs before bringing home a foster animal.</p>
+            <p>You may still continue the application, but please vaccinate your dogs before bringing home a foster animal.</p>  
+            <p>By law in the State of Texas, all dogs must be vaccinated for rabies. </p>
           </div>
       </div>
       {% include add_explanation.html %}
@@ -149,7 +150,8 @@ layout: contact_sidebar
       <div class="alert alert-warning d-none js-cat-rabies-alert row" role="alert">
           <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
           <div class="col-md-11 alert-body">
-              <p>By law in the State of Texas, all cats must be vaccinated for rabies. You may still continue the application, but please vaccinate your cats before bringing home a foster animal.</p>
+            <p>You may still continue the application, but please vaccinate your cats before bringing home a foster animal.</p>  
+            <p>By law in the State of Texas, all cats must be vaccinated for rabies. </p>
           </div>
       </div>
       {% include add_explanation.html %}
@@ -208,7 +210,8 @@ layout: contact_sidebar
     <div class="alert alert-warning d-none js-seperate-animals-alert row" role="alert">
         <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
         <div class="col-md-11 alert-body">
-            <p>It is important that you have a plan in place to separate foster pets from your pets for their safety and well-being. It can be as simple as keeping them in separate rooms, crates, or using a baby gate as a barrier. Before taking home a foster animal, please consider your options and determine how you could separate the animal if needed.</p>
+          <p>Before taking home a foster animal, please consider your options and determine how you could separate the animal if needed.</p>  
+          <p>It is important that you have a plan in place to separate foster pets from your pets for their safety and well-being. It can be as simple as keeping them in separate rooms, crates, or using a baby gate as a barrier. </p>
         </div>
     </div>
     {% include add_explanation.html %}
