--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -23,7 +23,8 @@ layout: contact_sidebar
             <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
                 <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
                 <div class="col-md-11 alert-body">
-                    <p>While we won’t limit your foster choices, you’d be a great candidate for a puppy, kitten, or animal with medical or behavioral needs. They need more care than most animals, and it’s rare that foster care providers can take in these pets.</p>
+                    <p>While we won’t limit your foster choices, you’d be a great candidate for a puppy, kitten, or animal with medical or behavioral needs. </p>
+                    <p>They need more care than most animals, and it’s rare that foster care providers can take in these pets.</p>
                 </div>
             </div>
         </div>
@@ -36,7 +37,8 @@ layout: contact_sidebar
             <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
                 <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
                 <div class="col-md-11 alert-body">
-                    <p>While we won’t limit your foster choices, you’d be a great candidate for an adult cat or dog with medical or behavioral needs. They need more care than most animals, and it’s rare that foster care providers can take in these pets.</p>
+                    <p>You’d be a great candidate for an adult cat or dog with medical or behavioral needs!</p>
+                    <p>While we won’t limit your foster choices, these animals need more care than most, and it’s rare that foster care providers can take in these pets.</p>
                 </div>
             </div>
         </div>
@@ -49,18 +51,22 @@ layout: contact_sidebar
             <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
                 <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
                 <div class="col-md-11 alert-body">
-                    <p>While we won’t limit your foster choices, you’d be a great candidate for healthy adult or senior dogs that don’t have a behavioral issues. They can generally be alone 8-10 hours at a time without problems. Also, healthy adult and senior cats can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</p>
+                    <b>While we won’t limit your foster choices, you’d be a great candidate for healthy adult or senior dogs or cats.</b>
+                    <p>The dogs can generally be alone 8-10 hours at a time, and the cats can usually go 10 hours or more as long as they have access to everything that they need.</p>
                 </div>
             </div>
         </div>
 
         <div class="form-check">
             <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios4" value="10+ hours">
-            <label class="form-check-label" for="adoptersRadios4">10+ hours</label>
+            <label class="form-check-label" for="adoptersRadios4">
+                10+ hours
+            </label>
             <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
                 <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
                 <div class="col-md-11 alert-body">
-                    <p>Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats. They can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</p>
+                    <p>Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats.</p>
+                    <p>They can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</p>
                 </div>
             </div>
         </div>
