--- a/_pages/Contact_info.html
+++ b/_pages/Contact_info.html
@@ -26,7 +26,7 @@ layout: contact_sidebar
     </div>
   </div>
   <div class="form-row">
-      <div class="form-group col-md-4">
+      <div class="form-group">
         <label for="inputPhone">Phone Number</label>
         <small id="phoneHelpBlock" class="form-text text-muted">
             Enter a 10 digit phone number
