--- a/_pages/Home_info.html
+++ b/_pages/Home_info.html
@@ -26,7 +26,8 @@ layout: contact_sidebar
             <div class="alert alert-warning d-none js-own-home-alert row" role="alert">
                 <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
                 <div class="col-md-11 alert-body">
-                    <p>You may want to make sure you have permission from the homeowner or property management that you are allowed to have pets in the home, as well as identify if there are breed or weight restrictions for dogs. Not having permission does not disqualify you from fostering. If you need help getting permission from the homeowner or property management, let us know.</p>
+                    <p>Not having permission does not disqualify you from fostering. However, you may want to make sure you have permission from the homeowner or property management that you are allowed to have pets in the home, as well as identify if there are breed or weight restrictions for dogs. </p>
+                    <p>If you need help getting permission from the homeowner or property management, let us know.</p>
                 </div>
             </div>
         </div>
@@ -35,7 +36,7 @@ layout: contact_sidebar
         {% include add_explanation.html %}
     </div>
     <!-- 2 below 'add explanation' entries to review visual difference only. Once visual styling determined, replace 'add explanation' function -->
-    <div class="js-add-explanation">
+    <!-- <div class="js-add-explanation">
         <a href="#">+ Add additional information</a>
         <small id="add_explanationHelpInline" class="text-muted">
           Optional
@@ -48,7 +49,7 @@ layout: contact_sidebar
         <small id="add_explanationHelpInline" class="text-muted">
             Optional
         </small>
-    </div>
+    </div> -->
     <div class="js-indoors-selection">
         <h5>Are you planning to have your foster animal live indoors?</h5>
         <div class="form-check">
