--- a/_pages/index.html
+++ b/_pages/index.html
@@ -17,7 +17,7 @@ layout: contact_sidebar
 <p>Before you start the application, verify with your veterinarian that your pets have current rabies vaccinations and discuss any other recommended vaccines.</p>
 <h4>1. Apply to become a Foster Care Provider</h4>
     <ul>
-        <li>Answer the following questions about yourself, availability, home, and pets.</li>
+        <li>Answer the questions on the following pages about yourself, availability, home, and pets.</li>
         <li>You may receive a call or email from us with questions about your application.</li>
         <li>If you are approved, you will receive an email from us about next steps.</li>
     </ul>
