Courtney content review revisions
Alert text, next steps formatting, start page formatting

--- a/_pages/Confirmation.html
+++ b/_pages/Confirmation.html
@@ -15,9 +15,29 @@ layout: contact_sidebar
 <form>
   <h4>From us and our animals, thank you for applying!</h4>
   <p>You should receive a confirmation email within a few minutes.</p>
-  <p>We will contact you by phone or email within 72 hours with follow up questions or with your approval notification. The approval notification will include next steps to continue the foster process. In the meantime, please review the <a href="http://www.austintexas.gov/sites/default/files/files/Animal_Services/Foster_Program_Manual_Sept2017.pdf">Foster Care Manual</a>.</p>
+  <div class="call-out">
+    <b>We will contact you by phone or email within 72 hours with follow up questions or with your approval notification.</b>
+    <p>The approval notification will include next steps to continue the foster process. In the meantime, please review the <a href="http://www.austintexas.gov/sites/default/files/files/Animal_Services/Foster_Program_Manual_Sept2017.pdf">Foster Care Manual</a>.</p>
+  </div>
   <p>If you have any questions, please call or send us an email. Please do not send multiple emails or voicemail messages. We are eager to speak with you and will get to you as soon as we can!</p>
   <p>If you would like other ways to help our cats and dogs, please visit <a href="http://www.austintexas.gov/department/volunteer">our volunteer page</a>.</p>
   <a class="btn btn-outline-warning" href="index.html" role="button">Temp button - Start over</a>
   <a class="btn btn-outline-warning" href="Help_info.html" role="button">Temp button - Back</a>
 </form>
+
+<!-- Below code is visual variation of above -->
+<!-- <h2>We have received your application</h2>
+<form>
+  <h4>From us and our animals, thank you for applying!</h4>
+  <h4>Next steps</h4>
+  <ul>
+    <li>You should receive a confirmation email within a few minutes.</li>
+    <li>We will contact you by phone or email within 72 hours with follow up questions or with your approval notification.</li>
+    <li>The approval notification will include next steps to continue the foster process.</li>
+    <li>In the meantime, please review the <a href="http://www.austintexas.gov/sites/default/files/files/Animal_Services/Foster_Program_Manual_Sept2017.pdf">Foster Care Manual</a>.</li>
+  </ul>
+  <p>If you have any questions, please call or send us an email. Please do not send multiple emails or voicemail messages. We are eager to speak with you and will get to you as soon as we can!</p>
+  <p>If you would like other ways to help our cats and dogs, please visit <a href="http://www.austintexas.gov/department/volunteer">our volunteer page</a>.</p>
+  <a class="btn btn-outline-warning" href="index.html" role="button">Temp button - Start over</a>
+  <a class="btn btn-outline-warning" href="Help_info.html" role="button">Temp button - Back</a>
+</form> -->
