--- a/_pages/Home_info.html
+++ b/_pages/Home_info.html
@@ -72,12 +72,12 @@ layout: contact_sidebar
             <div class="alert alert-warning d-none js-indoors-alert row" role="alert">
                 <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
                 <div class="col-md-11 alert-body">
-                    <p>Foster animals need to reside indoors:</p>
+                    <p>You may continue the application, but before bringing home a foster animal, make sure it can reside indoors:</p>
                     <ul>
                         <li>Kittens and cats should only be kept indoors, because there’s a high risk of them running away.</li>
                         <li>Puppies and dogs should be kept primarily indoors, but can go outside for potty breaks, play time, and exercise.</li>
                     </ul>
-                    <p>Before bringing home a foster animal, make sure it can reside indoors. If you don't think you'll be able to have your foster animal live indoors, please let us know and we may be able to help you figure out a solution.</p>
+                    <p>If you don't think you'll be able to have your foster animal live indoors, please let us know and we may be able to help you figure out a solution.</p>
                 </div>
             </div>
         </div>
