--- a/_pages/Yourself_info.html
+++ b/_pages/Yourself_info.html
@@ -105,7 +105,7 @@ layout: contact_sidebar
       <div class="alert alert-warning d-none js-humane-alert row" role="alert">
           <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
           <div class="col-md-11 alert-body">
-            <p>While we do not ask that you stop supporting other organizations, we do require that when you have one of the Austin Animal Center’s animals in your home, that you do not have foster animals from other organizations at the same time.</p>
+            <p>Fostering with other organizations does not disqualify you from fostering, but we do require that when you have one of the Austin Animal Center’s animals in your home, that you do not have foster animals from other organizations at the same time.</p>
             <p>This is to protect the health, safety, and overall well-being of the animals. If you feel that you have a special circumstance that you would like for us to consider, please let us know.</p>
           </div>    
       </div>
