Revert "Courtney content review revisions"
This reverts commit c56354f7f8c976861156a153cf16082242c91279.

--- a/_pages/Animal_info.html
+++ b/_pages/Animal_info.html
@@ -210,7 +210,7 @@ layout: contact_sidebar
     <div class="alert alert-warning d-none js-seperate-animals-alert row" role="alert">
         <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
         <div class="col-md-11 alert-body">
-          <p>You may continue the application, but before taking home a foster animal, please consider your options and determine how you could separate the animal if needed.</p>  
+          <p>Before taking home a foster animal, please consider your options and determine how you could separate the animal if needed.</p>  
           <p>It is important that you have a plan in place to separate foster pets from your pets for their safety and well-being. It can be as simple as keeping them in separate rooms, crates, or using a baby gate as a barrier. </p>
         </div>
     </div>
