--- a/_pages/index.html
+++ b/_pages/index.html
@@ -5,28 +5,17 @@ layout: contact_sidebar
 
 <h2>Apply to become a foster care provider</h2>
 <p>We’re so happy you’re interested in fostering for the Austin Animal Center! Applying to become a Foster Care Provider is the first step in the Fostering Process. Your answers to these questions will help us set you up for a successful fostering experience. Contact us with questions you have about filling out this application. Thank you - from all of us and all our dogs and cats!</p>
-<h4>Types of animals needing foster</h4>
-    <ul>
-        <li>Medium to large dogs</li>
-        <li>Neonatal kittens or puppies</li>
-        <li>Senior dogs and cats</li>
-        <li>Dogs and cats with special behavioral needs</li>
-        <li>Dogs and cats recovering from an illness, injury or surgery</li>
-    </ul>
-<!-- Below is visual variation of above -->
-    <!-- <div class="call-out">
-    <h4>Types of animals needing foster</h4>
-    <ul>
-        <li>Medium to large dogs</li>
-        <li>Neonatal kittens or puppies</li>
-        <li>Senior dogs and cats</li>
-        <li>Dogs and cats with special behavioral needs</li>
-        <li>Dogs and cats recovering from an illness, injury or surgery</li>
-    </ul>
-</div> -->
+<h3>Types of animals needing foster</h3>
+<ul>
+    <li>Medium to large dogs</li>
+    <li>Neonatal kittens or puppies</li>
+    <li>Senior dogs and cats</li>
+    <li>Dogs and cats with special behavioral needs</li>
+    <li>Dogs and cats recovering from an illness, injury or surgery</li>
+</ul>
 <h3>The foster process</h3>
 <p>Before you start the application, verify with your veterinarian that your pets have current rabies vaccinations and discuss any other recommended vaccines.</p>
-<h4>1. Fill out the application</h4>
+<h4>1. Apply to become a Foster Care Provider</h4>
     <ul>
         <li>Answer the questions on the following pages about yourself, availability, home, and pets.</li>
         <li>You may receive a call or email from us with questions about your application.</li>
