--- a/_pages/index.html
+++ b/_pages/index.html
@@ -8,7 +8,7 @@ layout: contact_sidebar
 <h4>Types of animals needing foster</h4>
     <ul>
         <li>Medium to large dogs</li>
-        <li>Neonatal kittens or puppies</li>
+        <li>Kittens or puppies less 8 weeks old</li>
         <li>Senior dogs and cats</li>
         <li>Dogs and cats with special behavioral needs</li>
         <li>Dogs and cats recovering from an illness, injury or surgery</li>
