--- a/_pages/Yourself_info.html
+++ b/_pages/Yourself_info.html
@@ -47,12 +47,12 @@ layout: contact_sidebar
           <label class="form-check-label" for="transportationRadios2">
           No
           </label>
-          <div class="alert alert-danger d-none js-transportation-alert row" role="alert">
+          <div class="alert alert-warning d-none js-transportation-alert row" role="alert">
             <i class="fas fa-ban fa-2x fa-fw col-md-1"></i>
             <div class="col-md-11 alert-body">
-              <p>Unfortunately, we cannot accept your application at this time.</p> 
-              <p>Foster animals must receive veterinary care immediately, especially in the event of an emergency. Please reapply if you get reliable transportation.</p>
-              <p>Thank you for helping us ensure the safety of our animals, and if you would like to help in other ways, please visit <a href="http://www.austintexas.gov/department/volunteer">our volunteer page</a>.</p>
+              <p>You may continue the application, but you must have a reliable transportation plan in place before fostering.</p> 
+              <p>Foster animals must receive veterinary care immediately, especially in the event of an emergency.</p>
+              <p>If you cannot get a reliable plan in place, but you would like to help in other ways, please visit <a href="http://www.austintexas.gov/department/volunteer">our volunteer page</a>.</p>
             </div>
           </div>
       </div>
