Time animals are left alone intervals changed
AAC said they wanted 0-4, 4-8, 8-12, 12+ with the option for overnight stays and outings for the 12+ alert.

--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -18,7 +18,7 @@ layout: contact_sidebar
         <div class="form-check">
             <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios1" value="0-3 hours">
             <label class="form-check-label" for="adoptersRadios1">
-            0-3 hours
+            0-4 hours
             </label>
             <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
                 <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
@@ -32,7 +32,7 @@ layout: contact_sidebar
         <div class="form-check">
             <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios2" value="3-8 hours">
             <label class="form-check-label" for="adoptersRadios2">
-            3-8 hours
+            4-8 hours
             </label>
             <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
                 <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
@@ -46,7 +46,7 @@ layout: contact_sidebar
         <div class="form-check">
             <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios3" value="8-10 hours">
             <label class="form-check-label" for="adoptersRadios3">
-            8-10 hours
+            8-12 hours
             </label>
             <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
                 <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
@@ -60,13 +60,13 @@ layout: contact_sidebar
         <div class="form-check">
             <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios4" value="10+ hours">
             <label class="form-check-label" for="adoptersRadios4">
-                10+ hours
+                12+ hours
             </label>
             <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
                 <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
                 <div class="col-md-11 alert-body">
-                    <p>Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats.</p>
-                    <p>They can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</p>
+                    <p>Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats. They can usually go 10 hours or more as long as they have access to everything that they need.</p>
+                    <p>You may also be a good candidate for animal outings or overnight stays.</p>
                 </div>
             </div>
         </div>
