Adding alert to coordinating potential adoptions
This is incomplete. Need dev to "wire it up."

--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -90,6 +90,12 @@ layout: contact_sidebar
             <label class="form-check-label" for="adoptersRadios2">
             No
             </label>
+            <div class="alert alert-warning d-none js-transportation-alert row" role="alert">
+              <i class="fas fa-ban fa-2x fa-fw col-md-1"></i>
+              <div class="col-md-11 alert-body">
+                <p>It is expected that you will promote the adoption of your foster animal and meet with adopters.</p>
+              </div>
+            </div>
         </div>
     </div>
     <div>
