Make adopter toggle warning work
por ejemplo

![adopter toggle](https://user-images.githubusercontent.com/272675/37434567-fc551156-27ad-11e8-92d4-dbfb6838d9b4.gif)

--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -74,7 +74,7 @@ layout: contact_sidebar
     <div>
         {% include add_explanation.html %}
     </div>
-    <div>
+    <div class="js-adopters-help-selection">
         <h5>Can you meet with potential adopters to show them your foster animal?</h5>
         <small id="adoptersHelpBlock" class="form-text text-muted">
             These meetings would be scheduled by you, at times and locations of your choice.
@@ -90,7 +90,7 @@ layout: contact_sidebar
             <label class="form-check-label" for="adoptersRadios2">
             No
             </label>
-            <div class="alert alert-warning d-none js-transportation-alert row" role="alert">
+            <div class="alert alert-warning d-none js-adopters-help-alert row" role="alert">
               <i class="fas fa-ban fa-2x fa-fw col-md-1"></i>
               <div class="col-md-11 alert-body">
                 <p>It is expected that you will promote the adoption of your foster animal and meet with adopters.</p>
