--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -91,7 +91,7 @@ layout: contact_sidebar
             No
             </label>
             <div class="alert alert-warning d-none js-adopters-help-alert row" role="alert">
-              <i class="fas fa-ban fa-2x fa-fw col-md-1"></i>
+              <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
               <div class="col-md-11 alert-body">
                 <p>It is expected that you will promote the adoption of your foster animal and meet with adopters.</p>
               </div>
