Help adopters warning content changed
updated this with better content after Ben W fixed the js

--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -93,7 +93,8 @@ layout: contact_sidebar
             <div class="alert alert-warning d-none js-adopters-help-alert row" role="alert">
               <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
               <div class="col-md-11 alert-body">
-                <p>It is expected that you will promote the adoption of your foster animal and meet with adopters.</p>
+                <p>Helping get foster animals adopted is an important part of fostering.</p>
+                <p>As a foster, you will be expected to coordinate and attend meetings with potential adopters and your foster animal.</p>
               </div>
             </div>
         </div>
