--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -93,8 +93,8 @@ layout: contact_sidebar
             <div class="alert alert-warning d-none js-adopters-help-alert row" role="alert">
               <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
               <div class="col-md-11 alert-body">
-                <p>Helping get foster animals adopted is an important part of fostering.</p>
-                <p>As a foster, you will be expected to coordinate and attend meetings with potential adopters and your foster animal.</p>
+                <p>Promoting your foster and meeting with potential adopters is an important part of our program.</p>
+                <p>When fostering an animal for AAC, you can be the animal’s number one advocate!</p>
               </div>
             </div>
         </div>
