Home owner alert language change
AAC wanted to begin with this thought and remove the first sentence.

--- a/_pages/Home_info.html
+++ b/_pages/Home_info.html
@@ -26,7 +26,7 @@ layout: contact_sidebar
             <div class="alert alert-warning d-none js-own-home-alert row" role="alert">
                 <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
                 <div class="col-md-11 alert-body">
-                    <p>Not owning your home does not disqualify you from fostering. However, you may want to make sure you have permission from the homeowner or property management that you are allowed to have pets in the home, as well as identify if there are breed or weight restrictions for dogs. </p>
+                    <p>Make sure you get permission from the homeowner or property management to have pets in the home, and identify if there are breed or weight restrictions for dogs. </p>
                     <p>If you need help getting permission from the homeowner or property management, let us know.</p>
                 </div>
             </div>
