Removed supplies offer
Replaced with a generic, anything else not covered

--- a/_pages/Help_info.html
+++ b/_pages/Help_info.html
@@ -14,7 +14,7 @@ layout: contact_sidebar
 <h2>Tell us how we can help you foster</h2>
 <form>
   <div class="form-group">
-      <label for="inputHelp_foster">Based on what we have available, we may be able to offer some supplies for your foster animal if you need them. Would you like the Austin Animal Center to see if we can help you with supplies for your foster animal (crates, litter, etc.)?</label>
+      <label for="inputHelp_foster">Do you have any other questions or concerns not covered in this form?</label>
       <small id="Help_fosterHelpInline" class="text-muted">
           Optional
       </small>
