--- a/_pages/Confirmation.html
+++ b/_pages/Confirmation.html
@@ -16,11 +16,11 @@ layout: contact_sidebar
   <h4>From us and our animals, thank you for applying!</h4>
   <p>You should receive a confirmation email within a few minutes.</p>
   <div class="call-out">
-    <b>We will contact you by phone or email within 72 hours with follow up questions or with your approval notification.</b>
+    <b>We will contact you by phone or email within 5 days with follow up questions or with your approval notification.</b>
     <p>The approval notification will include next steps to continue the foster process. In the meantime, please review the <a href="http://www.austintexas.gov/sites/default/files/files/Animal_Services/Foster_Program_Manual_Sept2017.pdf">Foster Care Manual</a>.</p>
   </div>
   <p>If you have any questions, please call or send us an email. Please do not send multiple emails or voicemail messages. We are eager to speak with you and will get to you as soon as we can!</p>
-  <p>If you would like other ways to help our cats and dogs, please visit <a href="http://www.austintexas.gov/department/volunteer">our volunteer page</a>.</p>
+  <p>If you would like to learn about other ways to help our cats and dogs, please visit <a href="http://www.austintexas.gov/department/volunteer">our volunteer page</a>.</p>
   <a class="btn btn-outline-warning" href="index.html" role="button">Temp button - Start over</a>
   <a class="btn btn-outline-warning" href="Help_info.html" role="button">Temp button - Back</a>
 </form>
