Fixed IDs for accessibility
Availability question had some of the adopter question ID names

--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -12,12 +12,12 @@ layout: contact_sidebar
 <form>
     <div class="js-form-availability">
         <h5>On an average day, what is the longest period of time foster animals will be left alone in the home?</h5>
-        <small id="adoptersHelpBlock" class="form-text text-muted">
+        <small id="availabilityHelpBlock" class="form-text text-muted">
             "Alone" means without people to monitor eating, behavior, and going to the bathroom. For example, if you work in an office from 9am-5pm but come home from 12-1pm, then the longest time period alone would be 4 hours.
         </small>
         <div class="form-check">
-            <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios1" value="0-3 hours">
-            <label class="form-check-label" for="adoptersRadios1">
+            <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="availabilityRadios1" value="0-3 hours">
+            <label class="form-check-label" for="availabilityRadios1">
             0-3 hours
             </label>
             <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
@@ -30,8 +30,8 @@ layout: contact_sidebar
         </div>
 
         <div class="form-check">
-            <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios2" value="3-8 hours">
-            <label class="form-check-label" for="adoptersRadios2">
+            <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="availabilityRadios2" value="3-8 hours">
+            <label class="form-check-label" for="availabilityRadios2">
             3-8 hours
             </label>
             <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
@@ -44,8 +44,8 @@ layout: contact_sidebar
         </div>
 
         <div class="form-check">
-            <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios3" value="8-10 hours">
-            <label class="form-check-label" for="adoptersRadios3">
+            <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="availabilityRadios3" value="8-10 hours">
+            <label class="form-check-label" for="availabilityRadios3">
             8-10 hours
             </label>
             <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
@@ -58,8 +58,8 @@ layout: contact_sidebar
         </div>
 
         <div class="form-check">
-            <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios4" value="10+ hours">
-            <label class="form-check-label" for="adoptersRadios4">
+            <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="availabilityRadios4" value="10+ hours">
+            <label class="form-check-label" for="availabilityRadios4">
                 10+ hours
             </label>
             <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
